[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [ 
    "leetcode", "sql", "trace",
]

[workspace.dependencies]
leetcode = { path = "leetcode" }
sql = { path = "sql" }
trace = { path = "trace" }

# crates.io dependencies
futures = { version = "0.3" }
log = { version = "0.4" }

