[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [ 
    "leetcode", "macro_test", "sql", "trace",
]

[workspace.dependencies]
leetcode = { path = "leetcode", default-features = false }
sql = { path = "sql" }
trace = { path = "trace" }
macro_test = { path="macro_test" }
# crates.io dependencies
futures = { version = "0.3" }
log = { version = "0.4" }

[dependencies]
macro_test={workspace = true}


[package.metadata.clippy]
warnings = false