[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [ 
    "leetcode", "derive_macro", "produce_macro", "sql", "trace",
]

[workspace.dependencies]
leetcode = { path = "leetcode", default-features = false }
sql = { path = "sql" }
trace = { path = "trace" }
derive_macro = { path="derive_macro" }
# crates.io dependencies
futures = { version = "0.3" }
log = { version = "0.4" }

[dependencies]
derive_macro={workspace = true}
