[package]
name = "trace"
version = "0.1.0"
edition = "2021"

[dependencies]
pin-project = "1.1"
env_logger = "0.11"

rand = "0.8"

[dev-dependencies]
tokio = { version = "1.38", features = [
  "rt",
  "time",
  "macros",
  "rt-multi-thread",
] }

serial_test = "3.1"

log = { workspace = true }
futures ={ workspace = true  }